Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102764

[REG: 5->6] Pen / Pencil input devices not working

    XMLWordPrintable

Details

    • Android, iOS/tvOS/watchOS, Linux/X11, Windows
    • 718bef9d2c (qt/qtdeclarative/dev) f11824fcb0 (qt/qtdeclarative/6.3) e97bd5dcc6 (qt/qtdeclarative/6.4) f11824fcb0 (qt/tqtc-qtdeclarative/6.3) e97bd5dcc6 (qt/tqtc-qtdeclarative/6.4) 718bef9d2c (qt/tqtc-qtdeclarative/dev) f11824fcb0 (qt/qtdeclarative/6.3.2)

    Description

      Windows supports using a pen as a mouse input device. Normally, in response to a stroke of the pen on the screen, you would get mouse button down, mouse moved, and mouse button up events. In QtQuick with a MouseArea, if I tap with the pen without any motion on the screen it gives the onPressed and onReleased signals. However, if I move the pen on the screen, it only gives onPressed and PositionChanged. It doesn't emit the onReleased signal. A subsequent tap or drag does not give any onPressed signal, only positionChanged. 

      Some Android devices have a stylus input device (eg, Galaxy Note, S22 Ultra). I was surprised to find a similar bug in Android as in Windows. In this case there is no onReleased signal no matter whether the pen is moved or not.main.qml

      I have attached a simple MouseArea example that I used for testing. I get similar results using a DragHandler. I have not been able to test an iPad with Apple Pencil.

       

      Attachments

        For Gerrit Dashboard: QTBUG-102764
        # Subject Branch Project Status CR V

        Activity

          People

            srutledg Shawn Rutledge
            rss Richard Stephens
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: