Add qt.pointer.dispatch debug message for tablet->mouse synth

We have one for touch->mouse synthesis, so perhaps it's a good idea here
too; then we can confirm that it's missing on Windows, because Windows
normally does the synthesis (setPlatformSynthesizesMouse(false) is not
called on this platform, so the default is true, meaning we expect that
it does that). The cross-platform synthesis (and ability for a platform
plugin to disable) began with f931e5e72d4617023bbea46cba2c0d61bb1efa4f

Task-number: QTBUG-102764
Change-Id: Ic6913adbeb6b91e3953ddfe8b401975d95cd9af3
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit dcc691c77d7de0f52f8c37a3727efd088cd4d9b1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>